# cookiecutter-py-package-slim

./: README.md  cookiecutter.json  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: README.md  setup.cfg
{{cookiecutter.project_slug}}/: setup.cfg
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.repo_name}}/: AUTHORS.md  setup.cfg
