# setup.cfg
[metadata]
name = cookiecutter-py-package-slim
version= 1.0.0
author = Frank
author_email = 1yue8haogaoqi@gmail.com
description= Cookiecutter slim template for a Python package!
long_description = file: README.md, LICENSE
keywords = cookiecutter, template, package, python
license = BSD-3-Clause
url= https://github.com/liviaerxin/cookiecutter-py-package-slim
python_requires='>=3.6'
classifiers =
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development