{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License',
    'BSD license': 'License :: OSI Approved :: BSD License',
    'ISC license': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

# setup.cfg
[metadata]
name = {{ cookiecutter.project_slug  }}
version= {{ cookiecutter.version }}
author = {{ cookiecutter.full_name.replace('\"', '\\\"') }}
author_email = {{ cookiecutter.email }}
description= {{ cookiecutter.project_short_description }}
long_description = file: README.md, LICENSE
keywords = {{ cookiecutter.project_slug  }}
url = https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}
{%- if cookiecutter.open_source_license in license_classifiers %}
    license={{ cookiecutter.open_source_license }}
{%- endif %}
classifiers =
{%- if cookiecutter.open_source_license in license_classifiers %}
    {{ license_classifiers[cookiecutter.open_source_license] }},
{%- endif %}
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
install_requires =
{%- if cookiecutter.command_line_interface|lower == 'click' %}
    Click>=7.0
{%- endif %}
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src
exclude = tests*

[options.package_data]
* = *.txt, *.rst
hello = *.msg

{%- if 'no' not in cookiecutter.command_line_interface|lower %}
[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }}={{ cookiecutter.project_slug }}.cli:main
{%- endif %}

[options.extras_require]
test = 
{%- if cookiecutter.use_pytest == 'y' %}
    pytest>=3
    pytest-cov
{%- endif %}
format = 
{%- if cookiecutter.use_black == 'y' %}
    black
{%- endif %}